# rust-grpc-server-demo

./: Cargo.toml  LICENSE  README.md  build.rs
protos/: my_grpc_service.proto
src/: main.rs  my_grpc_server.rs
